modify top bar background color

--- a/facets_dive/components/facets_dive_controls/facets-dive-controls.html
+++ b/facets_dive/components/facets_dive_controls/facets-dive-controls.html
@@ -31,6 +31,7 @@ limitations under the License.
         @apply --paper-font-common-base;
         display: flex;
         overflow: visible;
+        background-color: rgba(50, 119, 183, 0.1);
       }
 
       .main-controls {
